samples/_failures_safe/1761128488_74ce83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d0b11a2.c: In function ‘main’:
./samples/SAFE/__tmp_6d0b11a2.c:177:5: error: expected expression at end of input
  177 |     if (
      |     ^~
./samples/SAFE/__tmp_6d0b11a2.c:177:5: error: expected declaration or statement at end of input
